# rare-disease-rag-app

./: .gitignore  README.md  Rare_Disease_RAG.pptx  abstracts_faiss_index.faiss  abstracts_faiss_index.pkl  kg_definitional_data.json  mim2gene.ipynb  pyproject.toml  rag_batch_results.json  rag_rare_system.ipynb  requirements.txt  streamlit_app.py
data/: mim2gene.txt
data/abstracts/: alpha-1_antitrypsin_deficiency_abstracts.json  cystic_fibrosis_abstracts.json  duchenne_muscular_dystrophy_abstracts.json  dystonia_abstracts.json  fabry_disease_abstracts.json  fragile_x_syndrome_abstracts.json  gaucher_disease_abstracts.json  hemophilia_a_abstracts.json  hemophilia_b_abstracts.json  huntington's_disease_abstracts.json  huntington_disease_abstracts.json  marfan_syndrome_abstracts.json  neurofibromatosis_type_1_abstracts.json  phenylketonuria_abstracts.json  pompe_disease_abstracts.json  prader-willi_syndrome_abstracts.json  sickle_cell_disease_abstracts.json  spinal_muscular_atrophy_abstracts.json  tay-sachs_disease_abstracts.json  thalassemia_abstracts.json  wilson_disease_abstracts.json
