[tool.poetry]
name = "rare-disease-rag-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
faiss-cpu = "^1.11.0"
openai = "^1.91.0"
transformers = "^4.52.4"
pandas = "^2.3.0"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"
streamlit = "^1.31.0"
langchain = "^0.3.26"
langchain-openai = "^0.3.25"
langchain-community = "^0.3.26"
sentence-transformers = "^4.1.0"
pypdf = "^5.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
